bug with discover text being wrong color

--- a/client/src/components/Card/Card.css
+++ b/client/src/components/Card/Card.css
@@ -93,6 +93,7 @@
 }
 
 .Card__discover-link {
+  color: black;
   text-align: center;
   margin-left: 22%;
   margin-right: 22%;
@@ -101,7 +102,9 @@
 
 .Card__discover-link a {
   font-size: 24px;
-  width: 55%;
+  width: 10rem;
+  margin-left: 2rem;
+  margin-right: 2rem;
   text-decoration: none;
 }
 
